datasets/dataset_txt/scrapy/scrapy_569.txt
gajop commented on Jul 28, 2017 •
edited
$ pip install scrappy
Collecting scrappy
  Using cached Scrappy-0.3.0.alpha.4.tar.gz
Collecting guessit (from scrappy)
  Using cached guessit-2.1.4.tar.gz
Collecting tvdb_api (from scrappy)
  Using cached tvdb_api-1.10.tar.gz
Collecting hachoir-metadata (from scrappy)
  Using cached hachoir-metadata-1.3.3.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/tmp/pip-build-e218slx9/hachoir-metadata/setup.py", line 65
        except OSError, err:
                      ^
    SyntaxError: invalid syntax
    
    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in /tmp/pip-build-e218slx9/hachoir-metadata/
Edit: it installs fine on python 2.7